--- a/day04/package.json
+++ b/day04/package.json
@@ -15,6 +15,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.4.0",
+        "react-masonry-css": "^1.0.16",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.1.1",
         "sass": "^1.83.1",
